--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
-  "name": "prisss",
+  "name": "muse_api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "source": "src/inedx.ts",
+  "main": "dist/index.js",
   "scripts": {
     "dev": "nodemon",
     "build": "tsc -p .",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "migrate:dev": "prisma migrate dev",
+    "migrate:dev:create": "prisma migrate dev --create-only",
+    "migrate:deploy": "npx prisma migrate deploy",
+    "migrate:reset": "npx prisma migrate reset",
+    "migrate:resolve": "npx prisma migrate resolve",
+    "prisma:generate": "npx prisma generate",
+    "prisma:studio": "npx prisma studio"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +28,10 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.195",
     "@types/node": "^20.2.3",
+    "@typescript-eslint/parser": "^5.59.9",
+    "eslint": "^8.42.0",
     "nodemon": "^2.0.22",
+    "prettier": "^2.8.8",
     "prisma": "^4.14.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
