--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/node": "^20.3.1",
     "@typescript-eslint/parser": "^5.59.11",
     "eslint": "^8.42.0",
+    "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
     "nodemon": "^2.0.22",
