--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "nodemon",
     "build": "tsc -p .",
     "start": "node dist/index.js",
+    "lint": "eslint --ext .ts .",
     "prepare": "husky install",
+    "postinstall": "npx prisma generate",
     "test": "echo No tests found.",
     "format": "prettier --write --ignore-path=.gitignore .",
     "format:check": "prettier --check --ignore-path=.gitignore .",
@@ -32,6 +34,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "get-audio-duration": "^4.0.0",
+    "image-size": "^1.0.2",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21"
   },
@@ -48,6 +52,7 @@
     "@typescript-eslint/parser": "^5.59.11",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
     "nodemon": "^2.0.22",
