--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "migrate:reset": "npx prisma migrate reset",
     "migrate:resolve": "npx prisma migrate resolve",
     "prisma:generate": "npx prisma generate",
-    "prisma:studio": "npx prisma studio"
+    "prisma:studio": "npx prisma studio",
+    "prisma:format": "npx prisma format"
   },
   "keywords": [],
   "author": "",
