--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -33,8 +33,8 @@
         "bierner.github-markdown-preview",
         "christian-kohler.npm-intellisense",
         "GitHub.copilot-chat",
-        "GitHub.copilot-nightly",
-        "redhat.vscode-yaml"
+        "redhat.vscode-yaml",
+        "EditorConfig.EditorConfig"
       ],
       "settings": {
         "workbench.colorTheme": "Catppuccin Mocha",
