--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "start": "node dist/index.js",
     "lint": "eslint --ext .ts .",
     "prepare": "husky install",
-    "postinstall": "npx prisma generate",
     "test": "echo No tests found.",
     "format": "prettier --write --ignore-path=.gitignore .",
     "format:check": "prettier --check --ignore-path=.gitignore .",
@@ -27,7 +26,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^4.15.0",
+    "@prisma/client": "^4.16.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
@@ -38,7 +37,9 @@
     "get-audio-duration": "^4.0.0",
     "image-size": "^1.0.2",
     "jsonwebtoken": "^9.0.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -50,6 +51,8 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.195",
     "@types/node": "^20.3.1",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/parser": "^5.59.11",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
@@ -58,7 +61,7 @@
     "lint-staged": "^13.2.2",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
-    "prisma": "^4.15.0",
+    "prisma": "^4.16.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
   },
